vendored_parsers/tree-sitter-http/test/corpus/request.txt
=====================
Request to localhost
=====================

GET http://localhost:3000/api/v1/users/all

---

(document
  (section
  request: (request
    method: (method)
    url: (target_url))))


============================
Request to a random website
============================

GET https://neorg.org/

---

(document
  (section
  request: (request
    method: (method)
    url: (target_url))))


========================
Request with parameters
========================

GET https://reqres.in/api/users?page=5

---

(document
  (section
  request: (request
    method: (method)
    url: (target_url))))


======================================
Request parameters with extra symbols
======================================

GET https://localhost:3000/api?id[]=1&id[]=2&email=foo@bar.com&statement=2+2=4

---

(document
  (section
  request: (request
    method: (method)
    url: (target_url))))


======================================
Request parameters without value
======================================

GET https://localhost:3000/api?page[number]=3&fields[available]&available

---

(document
  (section
  request: (request
    method: (method)
    url: (target_url))))


======================================
Request parameters without value and trailing =
======================================

GET https://localhost:3000/api?page[number]=3&fields[available]=&available=

---

(document
  (section
  request: (request
    method: (method)
    url: (target_url))))

=================
Request fragment
=================

GET https://github.com/rest-nvim/tree-sitter-http?tab=readme-ov-file#how-to-contribute

---

(document
  (section
  request: (request
    method: (method)
    url: (target_url))))

===============================
Request with HTTP version (#44)
===============================
GET https://example.comHTTP/1.1 HTTP/1.1


---

(document
  (section
    request: (request
      method: (method)
      url: (target_url)
      version: (http_version))))

=====================================
Request with whitespace in target URI
=====================================

GET https://example.com/foo bar baz HTTP/1.1

---

(document
  (section
  request: (request
    method: (method)
    url: (target_url)
    version: (http_version))))

=================
Named request
=================
### A First Request
GET https://example.com/

###
# @name=A Second Request
GET https://example.com/

### not a request name
###
# @name A Third Request
GET https://example.com/

---

(document
  (section
    (request_separator
      value: (value))
    request: (request
      method: (method)
      url: (target_url)))
  (section
    (request_separator)
    (comment
      name: (identifier)
      value: (value))
    request: (request
      method: (method)
      url: (target_url)))
  (section
    (request_separator
      value: (value)))
  (section
    (request_separator)
    (comment
      name: (identifier)
      value: (value))
    request: (request
      method: (method)
      url: (target_url))))


=================
Response Redirect
=================

GET https://example.com/
Accept: application/json

>> ./response.json

---

(document
  (section
    request: (request
      method: (method)
      url: (target_url)
      header: (header
        name: (header_entity)
        value: (value))
      (res_redirect
        path: (path)))))

=================
Response Redirect (Force)
=================

GET https://example.com/
Accept: application/json

>>! ./response.json

---

(document
  (section
    request: (request
      method: (method)
      url: (target_url)
      header: (header
        name: (header_entity)
        value: (value))
      (res_redirect
        path: (path)))))
