vendored_parsers/tree-sitter-http/test/corpus/variables.txt
===============================
Request with dynamic variables
===============================

POST https://reqres.in/api/users
Content-Type: application/json

{
    "userid" : "{{$uuid}}",
    "time" : "{{$timestamp}}",
    "randomValue": "{{$randomInt}}",
    "name": "morpheus",
    "job": "leader",
    "array": ["a", "b", "c"],
    "object_ugly_closing": {
      "some_key": "some_value"
    }
}

---

(document
  (section
  request: (request
    method: (method)
    url: (target_url)
    header: (header
      name: (header_entity)
      value: (value))
    body: (json_body))))


================================
Request with document variables
================================

@username = "NTBBloodbath"
@admin = true
@address = Neovim Land

POST https://foo.com/api/users/create
Content-Type: application/json

{
  "username": "{{username}}",
  "is_admin": "{{admin}}"
}

---

(document
  (section
  (variable_declaration
    name: (identifier)
    value: (value))
  (variable_declaration
    name: (identifier)
    value: (value))
  (variable_declaration
    name: (identifier)
    value: (value))
  request: (request
    method: (method)
    url: (target_url)
    header: (header
      name: (header_entity)
      value: (value))
    body: (json_body))))


==========================================
Request with document variable as the URL
==========================================

@url = "https://foo.com/api"

POST {{ url }}/users/create
Content-Type: application/json

{
  "username": "JohnDoe",
  "is_admin": false
}

---

(document
  (section
  (variable_declaration
    name: (identifier)
    value: (value))
  request: (request
    method: (method)
    url: (target_url
      (variable
        name: (identifier)))
    header: (header
      name: (header_entity)
      value: (value))
    body: (json_body))))

====================================================
Request with document variable as query param value
====================================================

@query = "value"

GET https://foo.com/api/users/create?query={{query}}&query2={{ query }}
Content-Type: application/json

---

(document
  (section
  (variable_declaration
    name: (identifier)
    value: (value))
  request: (request
    method: (method)
    url: (target_url
      (variable
        name: (identifier))
      (variable
        name: (identifier)))
    header: (header
      name: (header_entity)
      value: (value)))))

===============================================
Request with document variable as header value
===============================================

@content = "application/json"

POST https://foo.com/api/users/create
Content-Type: {{ content }}

{
  "username": "JohnDoe",
  "is_admin": false
}

---

(document
  (section
  (variable_declaration
    name: (identifier)
    value: (value))
  request: (request
    method: (method)
    url: (target_url)
    header: (header
      name: (header_entity)
      value: (value
        (variable
          name: (identifier))))
    body: (json_body))))


==================================
Request with Lua script variables
==================================

# Should write the returned variables to the env file.
# Then the second request can be run
GET https://jsonplaceholder.typicode.com/posts/3

> {%

local body = context.json_decode(context.result.body)

context.set_env("userId", body.userId)
context.set_env("postId", body.id)

%}

###
GET https://jsonplaceholder.typicode.com/posts/{{postId}}

---

(document
  (section
  (comment)
  (comment)
  request: (request
    method: (method)
    url: (target_url)
    (res_handler_script
      (script))))
  (section
  (request_separator)
  request: (request
    method: (method)
    url: (target_url
      (variable
        name: (identifier))))))
